--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,21 @@ repositories {
 }
 
 dependencies {
-    compile 'org.springframework:spring-webmvc'
-    compile 'org.apache.tomcat.embed:tomcat-embed-core'
-    compile 'ch.qos.logback:logback-classic'
-    compile 'org.slf4j:jcl-over-slf4j'
-    compile 'org.slf4j:jul-to-slf4j'
-    compile 'org.springframework.boot:spring-boot-autoconfigure'
+    compile 'org.springframework.boot:spring-boot-starter-web'
+//    compile 'org.springframework:spring-webmvc'
+//    compile 'org.apache.tomcat.embed:tomcat-embed-core'
+//    compile 'ch.qos.logback:logback-classic'
+//    compile 'org.slf4j:jcl-over-slf4j'
+//    compile 'org.slf4j:jul-to-slf4j'
+//    compile 'org.springframework.boot:spring-boot-autoconfigure'
 
+    testCompile("org.springframework.boot:spring-boot-starter-test")
 }
+
+bootRun.environment([
+        "WELCOME_MESSAGE": "hello",
+])
+
+test.environment([
+        "WELCOME_MESSAGE": "Hello from test",
+])
