--- a/manifest.yml
+++ b/manifest.yml
@@ -3,6 +3,6 @@ applications:
 - name: pal-tracker
   path: build/libs/pal-tracker.jar
   routes:
-  - route: leetcat-pal-tracker.apps.evans.pal.pivotal.io
+  - route: leetcat-pal-tracker-review.apps.evans.pal.pivotal.io
   env:
-    WELCOME_MESSAGE: Hello from Cloud Foundry
+    WELCOME_MESSAGE: Hello from Review
