--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ dependencies {
 //    compile 'org.springframework.boot:spring-boot-autoconfigure'
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
+
+    compileOnly 'org.projectlombok:lombok:1.18.2'
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.1")
 }
 
 bootRun.environment([
