--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
+import org.flywaydb.gradle.task.FlywayMigrateTask
+
 plugins {
     id "java"
     id "org.springframework.boot" version "1.5.4.RELEASE"
+    id "org.flywaydb.flyway" version "4.2.0"
 }
 
 repositories {
@@ -8,24 +11,34 @@ repositories {
 }
 
 dependencies {
-    compile 'org.springframework.boot:spring-boot-starter-web'
-//    compile 'org.springframework:spring-webmvc'
-//    compile 'org.apache.tomcat.embed:tomcat-embed-core'
-//    compile 'ch.qos.logback:logback-classic'
-//    compile 'org.slf4j:jcl-over-slf4j'
-//    compile 'org.slf4j:jul-to-slf4j'
-//    compile 'org.springframework.boot:spring-boot-autoconfigure'
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.1")
+    compile("org.springframework.boot:spring-boot-starter-jdbc")
+    compile("mysql:mysql-connector-java:6.0.6")
+    compileOnly 'org.projectlombok:lombok:1.18.2'
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
-
-    compileOnly 'org.projectlombok:lombok:1.18.2'
-    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.1")
 }
 
+def developmentDbUrl = "jdbc:mysql://localhost:3306/tracker_dev?user=tracker&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
 bootRun.environment([
         "WELCOME_MESSAGE": "hello",
+        "SPRING_DATASOURCE_URL": developmentDbUrl,
 ])
 
+def testDbUrl = "jdbc:mysql://localhost:3306/tracker_test?user=tracker&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
 test.environment([
         "WELCOME_MESSAGE": "Hello from test",
+        "SPRING_DATASOURCE_URL": testDbUrl,
 ])
+
+flyway {
+    url = developmentDbUrl
+    user = "tracker"
+    password = ""
+    locations = ["filesystem:databases/tracker/migrations"]
+}
+
+task testMigrate(type: FlywayMigrateTask) {
+    url = testDbUrl
+}
